[package]
name = "httpbin"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
volo = "0.10"
volo-http = { version = "0.3", features = ["server", "query", "form", "json"] }
motore = "0.4"

async-stream = "0.3"
bytes = "1"
faststr = "0.2"
futures = "0.3"
http = "1"
http-body = "1"
hyper = "1"
mime = "0.3"
rand = "0.8"
serde = { version = "1", features = ["derive"] }
sonic-rs = "0.3"
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }

[profile.release]
opt-level = 3
debug = true
debug-assertions = false
overflow-checks = false
lto = true
panic = 'unwind'
incremental = false
codegen-units = 1
rpath = false
